[package]
name = "chronork"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10" # Solves the atomic write race condition
chrono = { version = "0.4", default-features = false, features = ["clock"] } # Lightweight time parsing

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link-time optimization for smaller binary
codegen-units = 1   # Reduces memory usage during compilation (prevents LMK crashes)
panic = 'abort'     # Strips panic unwinding payload, shrinking binary further